# backend/src/models/House.ts
@@ -1,0 +1,15 @@
+export default interface House {
+    id: number;
+    name: string;
+    description: string;
+    location: string;
+    pricePerMonth: number;
+    facilities: string[];
+    type: string;
+    images: string[];
+    managerId: number;
+    ownerId: number;
+    status: string;
+    createdAt: string;
+    updatedAt: string;
+}
